--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ali-oss": "^6.1.0",
     "axios": "latest",
     "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.4.11",
